frontend/src/css/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    :root {
        --blue-primary: #0369a1;
        --border: #555;
        --hover: #333;
    }

    html,
    body {
        font-family: "Rubik", sans-serif;
        font-size: 15px;
        font-optical-sizing: auto;
        font-weight: 400;
        font-style: normal;
        color: #eee;
        background-color: #1a1a1a;
    }

    h1 {
        font-family: "Lora", serif;
    }
}

